fixed skills section description

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             <span class="text--green">Professional Skill Set</span>
           </h1>
           <p class="skills__subtitle">
-            Cloud Platforms, Tools, and Languages I work with
+            Cloud Platforms, Tools, and Languages I work with!
           </p>
       </div>
     
